[gd_scene load_steps=4 format=2]

[ext_resource path="res://Graphics/Cannon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hazards/Cannon.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 3 )

[node name="Cannon" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -6, 0 )
texture = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
